--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,12 +1,3 @@
-.wrapper{
-    display:flex;
-    max-width: 1260px;
-}
-.item{
-    flex:1;
-    width: 100%;
-    max-width: 630px;
-}
 .burger_ingredient {
     height:600px;
     overflow: auto;
@@ -15,4 +6,7 @@
 
     height:600px;
     overflow: auto;
+}
+.tab{
+    display: flex;
 }
