--- a/src/components/burger-ingredients/burger-ingridient-items/burger-ingridient-items.module.css
+++ b/src/components/burger-ingredients/burger-ingridient-items/burger-ingridient-items.module.css
@@ -12,3 +12,6 @@
     grid-template-columns: repeat(var(--columns-count), minmax(0, 1fr));    
     text-align: center;
 }
+.wrapper_ingridient{
+    position: relative;
+}
