--- a/src/components/ingridient-details/ingridient-details.module.css
+++ b/src/components/ingridient-details/ingridient-details.module.css
@@ -1,11 +1,5 @@
-.header {
-
-}
-.text {
-    float: left;
-    /*composes: text text_type_main-large;*/
-}
-
-.close {
-    float: right;
+.nutrition_facts {
+    --columns-count: 4;
+    display: grid;
+    grid-template-columns: repeat(var(--columns-count), minmax(0, 1fr));     
 }
