--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,12 +1,49 @@
+.root_modal{    
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*
+    width: 800px;
+    height: 500px;
+    position: absolute;
+    left: 40%;    
+    top: 30%;    
+    margin: -150px 0 0 -300px;*/
 .modal {
-    width: 300px;
-    height: 300px;
-    border:3em;
-    border-color: aqua;
+    width: 500px;
+    height: 400px;
+    background-color: #000000;
+    border-radius: 15px;
+   /* opacity: 60%; */
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 150px auto 50px;
+    text-align: center;
 }
-.open{
-    overflow: hidden;
+.modal_overlay{    
+    width: 100%;
+    height: 100%;    
+    background: rgba(0, 0, 0, 0.5);
 }
-.close{
-    overflow: visible;
+.header {
+
+}
+.text {
+    float: left;
+    padding-left: 10px;
+    padding-top: 10px;
+    /*composes: text text_type_main-large;*/
+}
+
+.close {
+    float: right;
+    padding-right: 20px;
+    padding-top: 10px;
+}
+.close:hover{
+    cursor: pointer;
 }
