--- a/src/components/ingridient-details/ingridient-details.module.css
+++ b/src/components/ingridient-details/ingridient-details.module.css
@@ -1,4 +1,4 @@
-.nutrition_facts {
+.nutritionFacts{
     --columns-count: 4;
     display: grid;
     grid-template-columns: repeat(var(--columns-count), minmax(0, 1fr));     
