--- a/src/components/burger-ingredients/burger-ingridient-items/burger-ingridient-items.module.css
+++ b/src/components/burger-ingredients/burger-ingridient-items/burger-ingridient-items.module.css
@@ -9,6 +9,6 @@
     grid-template-columns: repeat(var(--columns-count), minmax(0, 1fr));    
     text-align: center;
 }
-.wrapperIngridient{
+.wrapperImageIngridient{
     position: relative;
 }
