--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -3,8 +3,15 @@
     flex-direction: column;
     gap: 10px
 }
-.placeOrder {
-    --columns-count: 2;
+.wrapperCreateOrder {
+    display: inline;
+}
+.createOrder{
+    float: right;
+    padding-right: 20px;
+    padding-top: 10px;
+}
+    /*--columns-count: 2;
     display: grid;
     grid-template-columns: repeat(var(--columns-count), minmax(0, 1fr));     
-}
+    */
